#--------------------------------------------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-02
2021-01-12 Mikhail Dubrovin
modified:   src/CalibParsBaseEpix10kaV1.py - change default cmod

Tag: V02-00-01
2021-01-08 Mikhail Dubrovin
- src/GeometryObject.cpp - cosmetic to eliminate new compiler warnings

Tag: V02-00-00 Valerio?

Tag: V01-01-00 Valerio?

Tag: V01-00-60
2020-09-22 Mikhail S. Dubrovin
- for Chuck add parameter fract to point_coor?d_indexes in GeometryAccess

Tag: V01-00-59
2020-09-18 Mikhail S. Dubrovin
- update geometry_image fix GeometryAccess
	modified:   app/geometry_image
	modified:   src/GeometryAccess.py

Tag: V01-00-58
2020-09-11 Mikhail S. Dubrovin
- fix for py3 compatability
	modified:   src/GeometryAccess.py
	modified:   src/GeometryObject.py

Tag: V01-00-57
2020-09-09 Mikhail S. Dubrovin
- convert to py3
	modified:   src/GeometryAccess.py
	modified:   src/GeometryObject.py
- cosmetic update
	modified:   SegGeometryCspad2x1V1.py
	modified:   SegGeometryEpix100V1.py
	modified:   SegGeometryEpix10kaV1.py
	modified:   SegGeometryJungfrauV1.py
	modified:   SegGeometryJungfrauV2.py
	modified:   SegGeometryMatrixV1.py
	modified:   SegGeometryStore.py

Tag: V01-00-56
2020-09-08 Mikhail S. Dubrovin

2020-09-04 Mikhail S. Dubrovin
- in progress converter from crystfel to psana, SegGeometry* to py3
	modified:   SegGeometry.py
	modified:   SegGeometryCspad2x1V1.py
	modified:   SegGeometryEpix100V1.py
	modified:   SegGeometryEpix10kaV1.py
	modified:   SegGeometryJungfrauV1.py
	modified:   SegGeometryJungfrauV2.py
	modified:   SegGeometryMatrixV1.py
	modified:   SegGeometryStore.py
	modified:   UtilsConvert.py
	new file:   UtilsConvertCrystFEL.py

Tag: V01-00-55
2020-09-02 Mikhail S. Dubrovin